[package]
name = "bluntforge-client"
version = "0.1.0"
edition = "2018"


[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.74"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3.22"
features = [
    "Location",
    "Document",
    "Node",
    "Window",


  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "WebSocket",
]