[package]
name = "bluntforge-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
env_logger = "0.8.4"
futures-util = "0.3.15"
log = "0.4.14"
tokio = {version = "1.7.0", features = ["rt-multi-thread", "macros"]}
tokio-tungstenite = "0.14.0"
warp = "0.3.1"
